fix overflow toogle menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,10 @@ body{
     align-items: center;
     justify-content: space-between;
     margin-left: -15px;
-    margin-right: -15px;
+}
+.logoLink{
+    color: white;
+    font-size: 1.5rem;
 }
 
 
@@ -84,7 +87,7 @@ body{
       
       .menu.is-active .menuInner::after {
         transform: translate3d(8px, 0, 0) rotate(-45deg) scale(0.7, 1); }
-  .menu-box {
+  .menuBox {
     width: 40px;
     height: 24px;
     display: inline-block;
